# sigrid-report-generator

./: .gitignore  .importlinter  AGENTS.md  README.md  generate_placeholder_docs.py  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  sigrid.yaml
.claude/: settings.local.json
.github/instructions/: placeholder-implementations.instructions.md  report-generator.instructions.md
.github/workflows/: compatibility-check.yml  lint.yml  sigrid-publish.yml  sigrid-pullrequest.yml  tests.yml
docs/: architecture.md  custom-placeholders.md  developers.md  placeholder descriptions.md  upgrade-v1.md
src/report_generator/: __init__.py  cli.py  report_generator.py  update_check.py
src/report_generator/generator/: __init__.py  constants.py  report.py  report_generator.py  sigrid_api.py
src/report_generator/generator/context/: portfolio_filters.py  sigrid_api.py
src/report_generator/generator/data_models/: __init__.py  architecture.py  architecture_portfolio.py  base.py  maintainability.py  maintainability_delta_quality_portfolio.py  maintainability_portfolio.py  osh_base.py  osh_portfolio.py  security.py  security_dashboard_findings_portfolio.py  security_dashboard_resolution_times_portfolio.py  security_portfolio.py
src/report_generator/generator/data_models/portfolio/: architecture_portfolio.py  base.py  maintainability_delta_quality_portfolio.py  maintainability_portfolio.py  modernization.py  objectives.py  objectives_sigrid.py  osh_portfolio.py  portfolio_arguments.py  portfolio_utils.py  progress_sigrid.py  security_dashboard_findings_portfolio.py  security_dashboard_resolution_times_portfolio.py  security_portfolio.py
src/report_generator/generator/data_models/system/: architecture.py  maintainability.py  osh.py
src/report_generator/generator/domain/: __init__.py  osh_base.py
src/report_generator/generator/domain/portfolio/: architecture_portfolio.py  base.py  maintainability_delta_quality_portfolio.py  maintainability_portfolio.py  modernization.py  objectives.py  osh_portfolio.py  portfolio_utils.py  progress_sigrid.py  security_dashboard_findings_portfolio.py  security_dashboard_resolution_times_portfolio.py  security_portfolio.py  sigrid_hygiene_portfolio.py
src/report_generator/generator/domain/portfolio/shared/: rated_mixin.py  (+1 more)
src/report_generator/generator/domain/shared/: osh_base.py
src/report_generator/generator/domain/system/: __init__.py  architecture.py  maintainability.py  osh.py  refactoring_candidates.py  security.py  system_metadata.py
src/report_generator/generator/formatters/: formatters.py  smart_remarks.py
src/report_generator/generator/placeholders/: __init__.py  base.py
src/report_generator/generator/placeholders/charts/: __init__.py  osh_charts.py  security_findings.py
src/report_generator/generator/placeholders/formatting/: formatters.py  smart_remarks.py  technologies.py
src/report_generator/generator/placeholders/images/: __init__.py  base.py  chart_image.py  treemap_image.py
src/report_generator/generator/placeholders/implementations/: __init__.py  base.py
src/report_generator/generator/placeholders/misc/: __init__.py  category_chart.py  chart_image.py  color_rating.py  moveable_marker.py  osh_slide.py  scatter_plot_chart.py  treemap_image.py
src/report_generator/generator/placeholders/rendering/: __init__.py  common.py  docx.py  pptx.py
src/report_generator/generator/placeholders/table/: refactoring_candidates.py
src/report_generator/generator/placeholders/text/: __init__.py  architecture.py  architecture_portfolio.py  base.py  maintainability.py  maintainability_delta_quality.py  maintainability_portfolio.py  metadata.py  modernization.py  objectives.py  osh.py  osh_portfolio.py  security.py  security_portfolio.py
src/report_generator/generator/report_utils/: __init__.py  common.py  docx.py  pptx.py
src/report_generator/generator/utils/: constants.py  star_rating.py  time_series.py  utils.py
src/report_generator/generator/utils/constants/: __init__.py  metadata.py
src/report_generator/presets/: __init__.py  presets.py
src/report_generator/presets/templates/: debug-template.docx  hygiene-report.pptx  itdd-technical-debt.pptx  modernization.pptx  objectives.pptx  portfolio-overview.pptx  sigrid-template.pptx
tests/report_generator/: test_data_models.py  test_docs.py  test_formatters.py  test_formatters_technologies.py  test_placeholders.py  test_portfolio_arguments.py  test_portfolio_filters.py  test_report_utils.py  test_sigrid_api.py  test_templates.py  test_time_series.py
tests/report_generator/cli/: reference_output.pptx  test_cli.py  test_update_check.py
tests/report_generator/integration/: _shared.py  pptx_diff.py  reference_itdd-technical-debt.pptx  reference_modernization.pptx  reference_objectives.pptx  reference_portfolio-overview.pptx  reference_refactoring-candidates.pptx  reference_system-maintainability-one-pager.pptx  reference_system-summary.pptx  test_report_generation.py  update_references.py
tests/report_generator/integration/references/: reference_hygiene-report.pptx  reference_itdd-technical-debt.pptx  reference_modernization.pptx  reference_objectives.pptx  reference_portfolio-overview.pptx  reference_refactoring-candidates.pptx  reference_system-maintainability-one-pager.pptx  reference_system-summary.pptx
tests/report_generator/integration/templates/: itdd-technical-debt.pptx  modernization.pptx  portfolio-overview.pptx
tests/report_generator/test_data_models/portfolio/: test_architecture.py  test_base.py  test_maintainability.py  test_modernization.py  test_objectives.py  test_osh.py  test_ratings.py  test_security.py
tests/report_generator/test_data_models/system/: test_maintainability.py
tests/report_generator/test_domain/portfolio/: test_architecture.py  test_base.py  test_hygiene.py  test_objectives.py  test_osh.py  test_ratings.py
tests/report_generator/test_domain/system/: test_maintainability.py
tests/report_generator/test_placeholders/: test_base.py  test_hygiene.py  test_portfolio.py  test_security_dashboard.py  test_treemap.py
(+33 files in other folders)
