[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, undefined names, …)
    "I",    # isort (import ordering)
    "B",    # flake8-bugbear (likely bugs and design issues)
    "N",    # pep8-naming (class/function/variable naming conventions)
    "UP",   # pyupgrade (modernise Python syntax for the target version)
    "PERF", # perflint (performance anti-patterns)
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — ruff format handles wrapping; remaining long lines (e.g. strings) cannot be auto-wrapped
    "B008",  # function call in default argument — Click evaluates defaults lazily at parse time
]

[tool.ruff.format]
# ruff format defaults are fine

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."
markers = [
    "integration: requires live Sigrid API and a valid REPORT_GENERATOR_TESTS_TOKEN",
]