[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
addopts = [
    "--import-mode=importlib",
    "-m", "not integration",
]
pythonpath = "."
filterwarnings = [
    "ignore:ChainedAssignmentError:FutureWarning:mpl_extra",
]
markers = [
    "integration: requires live Sigrid API and a valid REPORT_GENERATOR_TESTS_TOKEN",
]
