[metadata]
name = report-generator
version = 0.1.5
author = Software Improvement Group (SIG)
author_email = support@softwareimprovementgroup.com
description = Generate Sigrid reports
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/Software-Improvement-Group/sigrid-integrations/tree/main/report-generator
license_files = LICENSE
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
keywords =
	report
	powerpoint
	excel
	word
	pdf

[options]
package_dir =
	= src
packages = find:
include_package_data=True
python_requires = >=3.9
install_requires =
	mistune==2.0.0rc1
	pyyaml==6.0.1
	click==8.1.8
	pillow==10.4.0
	# lxml version needs to be in sync with the py3-lxml package in the image
	lxml==5.3.0 
	python-pptx>=1.0.2,<1.1
	python-docx>=1.1.2,<1.3
	pygments==2.17.2
	requests==2.32.3
	importlib-resources==6.1.1
	python-dateutil==2.9.0
	plotly>=6.2.0,<6.4
	kaleido==1.0.0
	numpy>=2.0.2,<2.4
    tqdm>=4.66.0,<5.0

[options.extras_require]
test = pytest; pytest-mock

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    report-generator=report_generator.cli:run

