[metadata]
name = report-generator
version = 1.0.6
author = Software Improvement Group (SIG)
author_email = support@softwareimprovementgroup.com
description = Generate Sigrid reports
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/Software-Improvement-Group/sigrid-report-generator
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords =
    report
    powerpoint
    excel
    word
    pdf

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    mistune==3.2.0
    pyyaml==6.0.3
    click==8.1.8
    pillow==12.1.1
# lxml version used across all integrations in the Docker image
    lxml==6.0.2
    python-pptx==1.0.2
    python-docx==1.2.0
    pygments==2.20.0
    requests==2.33.0
    importlib-resources==6.5.2
    python-dateutil==2.9.0
    numpy==2.4.4
    tqdm==4.67.1
    pandas==2.2.3
    matplotlib==3.10.8
    matplotlib-extra @ git+https://github.com/chenyulue/matplotlib-extra.git@d93f7459fa92d321742945412d3229dd00253e2c
    squarify==0.4.4
    platformdirs==4.9.4

[options.extras_require]
test =
    pytest==8.3.3
    pytest-mock==3.14.0
    freezegun==1.5.1
    ruff==0.7.4
    import-linter==2.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    report-generator=report_generator.cli:run

